# Highschool_Finish

./: README.md  main.py  pyproject.toml  requirements.txt
components/: bar_chart.py  choropleth_maps.py  dropdown.py  gender_dropdown.py  ids.py  layout.py  loader.py  map_chart.py
data/: province_name.csv
