[tool.poetry]
name = "school"
version = "0.1.0"
description = ""
authors = ["Alizcez <jaylim309@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
pandas = "^2.2.2"
dash-bootstrap-components = "^1.6.0"
plotly = "^5.22.0"
babel = "^2.15.0"
pandas-stubs = "^2.2.2.240603"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
